src/test/ui/nll/user-annotations/inherent-associated-constants.stderr
warning: lifetime parameter `'a` never used
  --> $DIR/inherent-associated-constants.rs:13:24
   |
LL | fn wf_associated_const<'a>(x: i32) {
   |                       -^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error: lifetime may not live long enough
  --> $DIR/inherent-associated-constants.rs:10:5
   |
LL | fn non_wf_associated_const<'a>(x: i32) {
   |                            -- lifetime `'a` defined here
LL |     A::<'a>::IC;
   |     ^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to previous error

